--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,6 @@ header {
 
 .submit-search {
     background-color: #885DF1;
-   
     border: none;
     border-radius: 6px;
     padding: 15px 30px;
@@ -45,6 +44,7 @@ header {
     color: white;
     font-size: 16px;
     font-weight: 800px;
+    cursor: pointer;
 }
 
 h1 {
@@ -68,10 +68,12 @@ main {
 }
 .temperature-display {
     align-items: center;
+    display: flex;
 }
 .weather-icon {
     position: relative;
-    top: 25px;
+    display: flex;
+    width: 85px;
     
 }
 .temperature {
@@ -82,7 +84,8 @@ main {
 .temperature-unit {
     font-size: 30px;
     position: relative;
-    top:-34px;
+    top: -10px;
+    
 }
 footer {
     padding: 30px 0 0 0;
