--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@ header {
     border: none;
     border-radius: 6px;
     padding: 15px;
-    
+
     font-size: 16px;
 }
 
@@ -52,50 +52,88 @@ h1 {
     font-weight: 600;
     margin: 40px 0 10px
 }
+
 p {
     font-size: 16px;
     color: #27214266;
     line-height: 25px;
 }
+
 strong {
-    color:#f65282 ;
-    font-weight: 400;
+    color: #f65282;
 }
-main {
+
+.weather-app-data {
     display: flex;
     justify-content: space-between;
-    
+
 }
+
 .temperature-display {
     align-items: center;
     display: flex;
 }
+
 .weather-icon {
     position: relative;
     display: flex;
     width: 85px;
-    
+
 }
+
 .temperature {
     font-size: 80px;
     font-weight: 600;
 
 }
+
 .temperature-unit {
     font-size: 30px;
     position: relative;
     top: -10px;
-    
+
 }
+
 footer {
     padding: 30px 0 0 0;
     text-align: center;
     color: #27214266;
     border-top: 1px solid #f9f7fe;
 }
+
 a {
     color: #885DF1;
 }
+
 #description {
-text-transform: capitalize;
+    text-transform: capitalize;
+}
+.weather-forecast-element {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+.weather-forecast-date {
+    text-align: center;
+    color: rgba(39, 33, 66, 0.4);
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+    text-align: center;
+    font-size: 38px;
+}
+
+.weather-forecast-temperatures {
+    text-align: center;
+    color:#f65282;
+    padding-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.weather-forecast-temperature {
+    padding: 0 10px;
 }
