--- a/src/style.css
+++ b/src/style.css
@@ -108,11 +108,13 @@ a {
 #description {
     text-transform: capitalize;
 }
+
 .weather-forecast-element {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
 }
+
 .weather-forecast-date {
     text-align: center;
     color: rgba(39, 33, 66, 0.4);
@@ -123,17 +125,22 @@ a {
 
 .weather-forecast-icon {
     text-align: center;
-    font-size: 38px;
+    width: 88px;
+    height: 88px;
+    display: block;
+    margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
     text-align: center;
-    color:#f65282;
+    color: #f65282;
     padding-bottom: 15px;
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 30px;
 }
+
 .weather-forecast-temperature {
     padding: 0 10px;
 }
